- BUG: Authentication when viewing remote properties lead
       to a crash. (Stefan)

Version 1.0.8
- CHG: The OK button in the commit dialog is enabled by default,
       the default minimum logsize is now zero. (Stefan)
- BUG: Some IE proxy settings weren't used correctly. This
       lead to TSVN not able to connect to repositories. (Stefan)

Version 1.0.7
- ADD: in the "check for updates" dialog a new
       context menu command to show the log. (Stefan)
- ADD: New option to specify the minimum size of a
       log message. (Stefan)
- ADD: It's possible to turn off the context menu
       icons completely with a registry setting. (Stefan)
- ADD: Performance is now much better throughout the
       whole application. (Stefan)
- ADD: Merging of two instead of just one URL. (Stefan)
- ADD: Paths with short filenames now work too when
       starting TortoiseProc from external programs. (Stefan)
- ADD: Comparing an older revision with the working copy
       on folders. TME is started for this in patch mode
       to avoid "ugly" unified diffs. (Stefan)
- ADD: TortoiseMerge can now resolve a conflicted file
       in Subversion automatically when saving. (Stefan)
- ADD: In the log dialog you now can select log messages
       and copy them to the clipboard. (Stefan)
- ADD: The overlay/columns can be disabled for specific
       folders by placing special files in them. (Stefan)
- ADD: A "Copy to..." command for the repository browser
       which (if not showing HEAD) shows the "save as"
       dialog and then copies the file to the working copy.
       This is the recommended way to recover a deleted
       file. (Stefan)
- ADD: Option to disable the overlays in applications
       other than explorer. (Stefan)
- ADD: Reverting got its own dialog where you can select
       and deselect files/folders from reverting. (Stefan)
- ADD: Sortable columns in the "check for updates" 
       dialog. (Stefan)
- ADD: The default proxy settings from the IE are used