@@ -155,13 +155,13 @@ BEGIN
     PUSHBUTTON      "&Help",IDHELP,243,143,50,14
 END
 
-IDD_COPY DIALOGEX 0, 0, 300, 177
+IDD_COPY DIALOGEX 0, 0, 300, 198
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Branch / Tag"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    GROUPBOX        "Repository",IDC_STATIC,7,7,286,66
+    GROUPBOX        "Repository",IDC_STATIC,7,7,286,82
     LTEXT           "&From WC at URL:",IDC_STATIC,13,18,80,8
     EDITTEXT        IDC_FROMURL,13,28,255,12,ES_AUTOHSCROLL | ES_READONLY | 
                     NOT WS_BORDER
@@ -169,12 +169,15 @@ BEGIN
     CONTROL         "",IDC_URLCOMBO,"ComboBoxEx32",CBS_DROPDOWN | 
                     CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP,13,52,255,64
     PUSHBUTTON      "...",IDC_BROWSE,273,52,14,14
-    GROUPBOX        "Log Message",IDC_STATIC,7,78,286,71
-    EDITTEXT        IDC_LOGMESSAGE,13,88,274,54,ES_MULTILINE | 
+    GROUPBOX        "Log Message",IDC_STATIC,7,98,286,71
+    EDITTEXT        IDC_LOGMESSAGE,13,108,274,54,ES_MULTILINE | 
                     ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    DEFPUSHBUTTON   "&OK",IDOK,129,156,50,14
-    PUSHBUTTON      "&Cancel",IDCANCEL,187,156,50,14
-    PUSHBUTTON      "&Help",IDHELP,243,156,50,14
+    DEFPUSHBUTTON   "&OK",IDOK,129,177,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,187,177,50,14
+    PUSHBUTTON      "&Help",IDHELP,243,177,50,14
+    CONTROL         "Create the branch/tag directly on the server",
+                    IDC_DIRECTCOPY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,
+                    70,274,10
 END
 
 IDD_IMPORT DIALOGEX 0, 0, 300, 163
@@ -249,7 +252,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION |
 CAPTION "Merge"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "&Merge changes into the current working copy from URL:",
+    LTEXT           "&Merge changes into the current working copy",
                     IDC_STATIC,7,7,331,8
     GROUPBOX        "From:",IDC_STATIC,7,17,331,46
     CONTROL         "",IDC_URLCOMBO,"ComboBoxEx32",CBS_DROPDOWN | 
@@ -753,7 +756,7 @@ BEGIN
         VERTGUIDE, 268
         VERTGUIDE, 287
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 191
     END
 
     IDD_IMPORT, DIALOG
