@@ -74,4 +74,5 @@ public:
 	CString m_wcURL;
 	CButton m_butBrowse;
 	CString m_sLogMessage;
+	BOOL m_bDirectCopy;
 };
