@@ -1162,5 +1162,8 @@
 		</File>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="\Development\Svn\TortoiseSVN\src\Resources\TortoiseProcENG.rc"/>
 	</Globals>
 </VisualStudioProject>
