@@ -1,3 +1,6 @@
+- ADD: When creating branches/tags, you now can choose if
+       you want to use the working copy as the source or
+       just to a repo->repo copy. (Stefan)
 - BUG: Authentication when viewing remote properties lead
        to a crash. (Stefan)
 
